# React-learning

deliveroo-clone/: .gitignore  App.js  package-lock.json  package.json  tailwind.config.js
deliveroo-clone/components/: Categories.js  CategoryCard.js  FeaturedRow.js  RestaurantCard.js
deliveroo-clone/django-backend/: pyproject.toml
deliveroo-clone/django-backend/django_api/api/: admin.py  models.py  serializers.py  urls.py  views.py
deliveroo-clone/django-backend/django_api/api/migrations/: 0001_initial.py  0002_dish_category.py
deliveroo-clone/django-backend/django_api/django_api/: settings.py  urls.py
deliveroo-clone/screens/: HomeScreen.js
